--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,8 @@
 
 // component
 @import './component/navbar/navbar';
+@import './component/sidebar/sidebar';
+@import './component//timeline/timeline';
 @import './component/input';
 
 // scroll
