--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -421,6 +421,9 @@
 .time-line-create-post .modal-body .btn-post {
   @apply h-9 w-full flex items-center justify-center rounded xl:rounded-lg bg-primary text-[15px] font-semibold text-white hover:bg-blue-900;
 }
+.time-line-create-post .modal-body .btn-post:disabled {
+  @apply xl:bg-gray-400 xl:text-[#BCC0C4] hover:cursor-not-allowed;
+}
 @screen max-xl {
   .time-line-create-post {
     @apply bg-white block;
